fixed responsive spacing in profile page

--- a/client/src/pages/Profile/style.css
+++ b/client/src/pages/Profile/style.css
@@ -28,3 +28,8 @@
   flex-direction: column;
 }
 
+.center-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
